--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,7 @@ body{
 }
 
 .tiledBackground {
+	/* background-image: url(https://iot4ag.us/wp-content/uploads/2021/03/IoT4Ag.svg); */
 	background-image: url(https://iot4ag.us/wp-content/uploads/2021/03/IoT4Ag.svg);
 	background-position: center;
 	background-size: 700px;	
@@ -31,3 +32,9 @@ body{
 	/* border: 2px solid; */
 	/* color: pink; */
   }
+
+
+.chart-container {
+	width: 100%;
+	height: 100%;
+}
