--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/*
 :root{
 	font-family: Arial, Helvetica, sans-serif;
 	--primary-color:#b9c6d2;
@@ -23,14 +23,14 @@ body{
 }
 
 .tiledBackground {
-	/* background-image: url(https://iot4ag.us/wp-content/uploads/2021/03/IoT4Ag.svg); */
+	/* background-image: url(https://iot4ag.us/wp-content/uploads/2021/03/IoT4Ag.svg); * /
 	background-image: url(https://iot4ag.us/wp-content/uploads/2021/03/IoT4Ag.svg);
 	background-position: center;
 	background-size: 700px;	
 	width: 700px;
 	height: 285px;
-	/* border: 2px solid; */
-	/* color: pink; */
+	/* border: 2px solid; * /
+	/* color: pink; * /
   }
 
 
@@ -38,3 +38,4 @@ body{
 	width: 100%;
 	height: 100%;
 }
+*/
